logs/dag_id=etl_pipeline2/run_id=manual__2026-03-24T142627.396922+0000/task_id=mrr_to_stg/attempt=1.log
[2026-03-24T14:26:28.838+0000] {local_task_job_runner.py:120} INFO - ::group::Pre task execution logs
[2026-03-24T14:26:28.862+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: etl_pipeline2.mrr_to_stg manual__2026-03-24T14:26:27.396922+00:00 [queued]>
[2026-03-24T14:26:28.869+0000] {taskinstance.py:2073} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: etl_pipeline2.mrr_to_stg manual__2026-03-24T14:26:27.396922+00:00 [queued]>
[2026-03-24T14:26:28.870+0000] {taskinstance.py:2303} INFO - Starting attempt 1 of 1
[2026-03-24T14:26:28.880+0000] {taskinstance.py:2327} INFO - Executing <Task(PythonOperator): mrr_to_stg> on 2026-03-24 14:26:27.396922+00:00
[2026-03-24T14:26:28.886+0000] {standard_task_runner.py:90} INFO - Running: ['***', 'tasks', 'run', 'etl_pipeline2', 'mrr_to_stg', 'manual__2026-03-24T14:26:27.396922+00:00', '--job-id', '149', '--raw', '--subdir', 'DAGS_FOLDER/etl_pipeline2.py', '--cfg-path', '/tmp/tmpfuh4knsy']
[2026-03-24T14:26:28.888+0000] {standard_task_runner.py:91} INFO - Job 149: Subtask mrr_to_stg
[2026-03-24T14:26:28.888+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/task/task_runner/standard_task_runner.py:61 DeprecationWarning: This process (pid=301) is multi-threaded, use of fork() may lead to deadlocks in the child.
[2026-03-24T14:26:28.888+0000] {standard_task_runner.py:63} INFO - Started process 302 to run task
[2026-03-24T14:26:28.937+0000] {task_command.py:426} INFO - Running <TaskInstance: etl_pipeline2.mrr_to_stg manual__2026-03-24T14:26:27.396922+00:00 [running]> on host 3ccff2366b2a
[2026-03-24T14:26:29.001+0000] {taskinstance.py:2644} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='etl_pipeline2' AIRFLOW_CTX_TASK_ID='mrr_to_stg' AIRFLOW_CTX_EXECUTION_DATE='2026-03-24T14:26:27.396922+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2026-03-24T14:26:27.396922+00:00'
[2026-03-24T14:26:29.002+0000] {taskinstance.py:430} INFO - ::endgroup::
[2026-03-24T14:26:29.018+0000] {base.py:84} INFO - Using connection ID 'postgres_stg' for task execution.
[2026-03-24T14:26:29.030+0000] {sql.py:457} INFO - Running statement: TRUNCATE stg_fact_orders, parameters: None
[2026-03-24T14:26:29.046+0000] {base.py:84} INFO - Using connection ID 'postgres_mrr' for task execution.
[2026-03-24T14:26:29.057+0000] {sql.py:457} INFO - Running statement: SELECT * FROM mrr_fact_orders, parameters: None
[2026-03-24T14:26:29.077+0000] {sql.py:466} INFO - Rows affected: 1660
[2026-03-24T14:26:29.083+0000] {logging_mixin.py:188} WARNING - /home/***/.local/lib/python3.12/site-packages/***/providers/common/sql/hooks/sql.py:407 AirflowProviderDeprecationWarning: Call to deprecated method _make_common_data_structure. (The `_make_serializable` method is deprecated and support will be removed in a future version of the common.sql provider. Please update the DbApiHook's provider to a version based on common.sql >= 1.9.1.)
[2026-03-24T14:26:29.091+0000] {base.py:84} INFO - Using connection ID 'postgres_stg' for task execution.
[2026-03-24T14:26:30.247+0000] {sql.py:576} INFO - Loaded 1000 rows into stg_fact_orders so far
[2026-03-24T14:26:31.002+0000] {sql.py:580} INFO - Done loading. Loaded a total of 1660 rows into stg_fact_orders
[2026-03-24T14:26:31.009+0000] {base.py:84} INFO - Using connection ID 'postgres_stg' for task execution.
[2026-03-24T14:26:31.020+0000] {sql.py:457} INFO - Running statement: TRUNCATE stg_dim_customers, parameters: None
[2026-03-24T14:26:31.034+0000] {base.py:84} INFO - Using connection ID 'postgres_mrr' for task execution.
[2026-03-24T14:26:31.045+0000] {sql.py:457} INFO - Running statement: SELECT * FROM mrr_dim_customers, parameters: None
[2026-03-24T14:26:31.050+0000] {sql.py:466} INFO - Rows affected: 182
[2026-03-24T14:26:31.056+0000] {base.py:84} INFO - Using connection ID 'postgres_stg' for task execution.
[2026-03-24T14:26:31.070+0000] {taskinstance.py:441} INFO - ::group::Post task execution logs
[2026-03-24T14:26:31.071+0000] {taskinstance.py:2890} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 465, in _execute_task
    result = _execute_callable(context=context, **execute_callable_kwargs)
             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/taskinstance.py", line 432, in _execute_callable
    return execute_callable(context=context, **execute_callable_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/models/baseoperator.py", line 400, in wrapper
    return func(self, *args, **kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 235, in execute
    return_value = self.execute_callable()
                   ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/operators/python.py", line 252, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/airflow/dags/etl_pipeline2.py", line 112, in mrr_to_stg
    stg.insert_rows(tgt, data)
  File "/home/airflow/.local/lib/python3.12/site-packages/airflow/providers/common/sql/hooks/sql.py", line 573, in insert_rows
    cur.execute(sql, values)
psycopg2.errors.SyntaxError: INSERT has more expressions than target columns
LINE 1: ...,'','12209','Germany','030-0074321','030-0076545','2026-03-2...
                                                             ^

[2026-03-24T14:26:31.081+0000] {taskinstance.py:1205} INFO - Marking task as FAILED. dag_id=etl_pipeline2, task_id=mrr_to_stg, execution_date=20260324T142627, start_date=20260324T142628, end_date=20260324T142631
[2026-03-24T14:26:31.092+0000] {standard_task_runner.py:110} ERROR - Failed to execute job 149 for task mrr_to_stg (INSERT has more expressions than target columns
LINE 1: ...,'','12209','Germany','030-0074321','030-0076545','2026-03-2...
                                                             ^
; 302)
[2026-03-24T14:26:31.107+0000] {local_task_job_runner.py:240} INFO - Task exited with return code 1
[2026-03-24T14:26:31.124+0000] {taskinstance.py:3482} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2026-03-24T14:26:31.129+0000] {local_task_job_runner.py:222} INFO - ::endgroup::
